--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                                 <label class="form__label" for="email">Enter Email</label>
                             </div>
                             <div class="form__group">
-                                <textarea class="form__input" type="text" id="msg" name="msg" placeholder="Message" required="" rows="3" spellcheck="false" style="margin: 10px; height: 80%; width: 80%;"></textarea>
+                                <textarea class="form__input" type="text" id="msg" name="msg" placeholder="Message" required="" rows="3" spellcheck="false" ></textarea>
                                 <label class="form__label" for="msg">Message</label>
                             </div>
                             <div class="form__button">
