some css to connect

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         <h3 class="contactus__tertiary">
                             Subscribe to our newsletter
                         </h3>
-                        <p class="contactus__connectgroup contactus__newsletter">
+                        <p class="contactus__connectgroup-text contactus__newsletter">
                             Our <a href="#">Editor's picks newsletter</a> will keep you informed about the latest trends.
                         </p>
                     </div>
@@ -68,7 +68,7 @@
                         <h3 class="contactus__tertiary">
                             Follow us on social media
                         </h3>
-                        <p class="contactus__connectgroup contactus__socialmedia">
+                        <p class="contactus__connectgroup-text contactus__socialmedia">
                             Join the conversation on  <a href="#">Facebook, </a><a href="#">LinkedIn </a>or <a href="#">Twitter,</a> or visit us on <a href="#">YouTube</a>.
                         </p>
                     </div>
@@ -76,7 +76,7 @@
                         <h3 class="contactus__tertiary">
                             Find an office
                         </h3>
-                        <p class="contactus__connectgroup contactus__office">
+                        <p class="contactus__connectgroup-text contactus__office">
                             With <a href="#">700 office location</a> in over 150 countries, we provide local knowledge with global experience.
                         </p>
                     </div>
@@ -84,7 +84,7 @@
                         <h3 class="contactus__tertiary">
                             Explore the latest news
                         </h3>
-                        <p class="contactus__connectgroup contactus__news">
+                        <p class="contactus__connectgroup-text contactus__news">
                             Stay up to date with the <a href="#">latest news</a> from EY — and see how we’re building a better working world.
                         </p>
                     </div>
