--- a/index.html
+++ b/index.html
@@ -43,9 +43,10 @@
                                 <textarea class="form__input" type="text" id="msg" name="msg" placeholder="Message" required="" rows="3" spellcheck="false" ></textarea>
                                 <label class="form__label" for="msg">Message</label>
                             </div>
+                            
                             <div class="form__button">
                                 
-                                    <button class="form__button-btn">Submit</button>
+                                    <button class="form__button-btn">Send Message</button>
                                 </div>
                             </div>
                         </form>
