--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- CSS -->
-    <link rel="stylesheet" href="css/contact.css">
+    <link rel="stylesheet" href="./css/contact.css">
+    <link rel="stylesheet" href="./Learners.css">
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,6 +21,28 @@
 </head>
 
 <body>
+    <section class="header">
+		<img id='logo' src="./assets/logo.jpg" alt="logo">
+		<div class="navItems">
+			<a href="##">About Us</a>
+			<a href="##">Our People</a>
+			<a href="##">Learn</a>
+			<button class="btn">Get Started</button>
+		</div>
+		<div class="Ham">
+			<img src="./assets/menu.png" alt="Ham">
+		</div>
+	</section>
+    <div class="dropMenu">
+		<ul>
+			<li><a href="##">About Us</a></li>
+			<li><a href="##">Our People</a></li>
+			<li><a href="##">Learn</a></li>
+			<button class="btn">Get Started</button>
+
+		</ul>
+		<div class="Close">X</div>
+	</div>
     <section class="contactus">
         <h1 class="contactus__primary connect__primary">Connect with us</h1>
         <div class="contactus__row">
@@ -108,49 +131,61 @@
 
         </div>
     </section>
-    <footer>
-        <div class="footer">
-            <div class="footer__group">
-                <h3 class="footer__heading">Company</h3>
-                <ul class="footer__items">
-                    <li class="footer__item"><a class="footer__links" href="">About Us</a> </li>
-                    <li class="footer__item"><a class="footer__links" href="">Learn Stories</a></li>
-                    <li class="footer__item"><a class="footer__links" href="">Our people</a></li>
-                    <li class="footer__item"><a class="footer__links" href="">Jobs</a></li>
-                </ul>
-            </div>
-
-            <div class="footer__group">
-                <h3 class="footer__heading">Resources</h3>
-                <ul class="footer__items">
-                    <li class="footer__item"><a class="footer__links" href="">Learn</a></li>
-                    <li class="footer__item"><a class="footer__links" href="">Career paths</a></li>
-                    <li class="footer__item"><a class="footer__links" href="">Interships</a></li>
-                    <li class="footer__item"><a class="footer__links" href="">Blogs</a></li>
-                </ul>
-            </div>
-
-            <div class="footer__group">
-                <h3 class="footer__heading">Support</h3>
-                <ul class="footer__items">
-                    <li class="footer__item"><a class="footer__links" href="">Contact Us</a></li>
-                    <li class="footer__item"><a class="footer__links" href="">Any ideas.Dm us</a></li>
-                    
-                </ul>
-
-            </div>
-            <div class="footer__group">
-                <h3 class="footer__heading">Services</h3>
-                <ul class="footer__items">
-                    <li class="footer__item"><a class="footer__links" href="">Startup services</a></li>
-                    <li class="footer__item"><a class="footer__links" href="">Design Services</a></li>
-                    <li class="footer__item"><a class="footer__links" href="">Mock Interview</a></li>
-                    <li class="footer__item"><a class="footer__links" href="">Projects</a></li>
-                </ul>
-            </div>
-        </div>
-
-    </footer>
+    <footer class="Footer_conatiner">
+		<div class="Footer_header">
+			<img src="./assets/logo.jpg" alt="Logo">
+			<br><br>
+			<p>We are here to solve your problems beacuse while pursuing your UG-CSE you might have lot many doubts
+				about trending jobs and skills required to get hired for that job, WE HELP YOU TO KNOW ABOT TRENDING
+				JOBS AND REQUIRED SKILLS</p>
+			<br>
+			<p>As well we help you to submit your projects in your degree pursuing university and we help you by free
+				tutorials in Data science,AI, ML</p>
+		</div>
+		<div class="Footer_columns_holder">
+			<div class="Footer_columns">
+				<h1>Company</h1>
+				<a href="##">About us</a>
+				<a href="##">Learner stories</a>
+				<a href="##">our people</a>
+				<a href="##">jobs</a>
+			</div>
+			<div class="Footer_columns">
+				<h1>Resources</h1>
+				<a href="##">Learn</a>
+				<a href="##">Carrer path</a>
+				<a href="##">Internship</a>
+				<a href="##">Blogs</a>
+			</div>
+			<div class="Footer_columns">
+				<h1>Support</h1>
+				<a href="##">Contact us</a>
+				<a href="##">FAQ</a>
+				<a href="##">Any ideas, DM us</a>
+				<a href="##">Doc</a>
+			</div>
+			<div class="Footer_columns">
+				<h1>Services</h1>
+				<a href="##">Startup services</a>
+				<a href="##">Design services</a>
+				<a href="##">Projects</a>
+				<a href="##">Courses</a>
+			</div>
+		</div>
+	</footer>
+	<div class="Privacy_holder">
+		<div class="Privacy_links">
+			<a href="##">Privacy policy</a>
+			<a href="##">Cookies Notice</a>
+			<a href="##">Security</a>
+			<a href="##">Terms of use</a>
+		</div>
+		<div class="Social-media">
+			<img src="./assets/twitter.svg" />
+			<img src="./assets/facebook.svg" />
+			<img src="./assets/instagram.svg" />
+		</div>
+	</div>
     <!--JavaScript link -->
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
     <script src="./contact.js"></script>
