--- a/index.html
+++ b/index.html
@@ -135,12 +135,11 @@
 		<div class="Footer_header">
 			<img src="./assets/logo.jpg" alt="Logo">
 			<br><br>
-			<p>We are here to solve your problems beacuse while pursuing your UG-CSE you might have lot many doubts
-				about trending jobs and skills required to get hired for that job, WE HELP YOU TO KNOW ABOT TRENDING
-				JOBS AND REQUIRED SKILLS</p>
+			<p>We are here to endure your muddled stages of knowing the trends while pursuing UG-CSE.</p>
 			<br>
-			<p>As well we help you to submit your projects in your degree pursuing university and we help you by free
-				tutorials in Data science,AI, ML</p>
+			<p>we help you to know about trending jobs and required skills</p>
+            <br>
+            <p>We will succour you in submitting your university projects as well as steer you with free tutorials</p>
 		</div>
 		<div class="Footer_columns_holder">
 			<div class="Footer_columns">
